--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,8 @@ name: Doxygen Action
 # events but only for the master branch
 on:
   push:
-    branches: [ main ]
+    branches:
+      - '*'
 
 
 
@@ -37,3 +38,8 @@ jobs:
           # Default Doxyfile build documentation to html directory.
           # Change the directory if changes in Doxyfile
           publish_dir: ./html
+defaults:
+permissions:
+env:
+run-name:
+concurrency:
